mas sass aplicado y mixin y variables

--- a/index.html
+++ b/index.html
@@ -57,37 +57,39 @@
   </header>
   <main>
     <div class="card text-bg-dark mb-5 banner-estilo-jesu">
-      <img src="./assets/banner-gradiente-index.png" class="imagen-banner" alt="arborista trepando un arbol, de fondo un parque público, luz calida">
+      <img src="./assets/banner-gradiente-index.png" class="imagen-banner"
+        alt="arborista trepando un arbol, de fondo un parque público, luz calida">
       <div class="card-img-overlay texto-card-banner">
         <h1 class="card-title">Historias, saberes y herramientas para quienes cuidan los árboles del mundo</h1>
       </div>
     </div>
-    
-    <div>
-      <h2 class="card-text text-center">Explora, aprende y conéctate con una comunidad global.</h2>
-      <p class="text-center">Recibe contenido seleccionado, herramientas útiles y lo mejor del mundo arborista
-        directamente en tu correo.</p>
-      <div class="d-grid gap-2 col-6 mx-auto">
-        <button class="btn btn-primary w-50 mx-auto boton-primario" type="button">Unirme a la comunidad</button>
-      </div>
-    </div>
+    <!--Bloque texto + botón-->
+    <section class="info-card-container">
+      <div class="info-card">
+        <h3 class="card-text text-center">Explora, aprende y conéctate con una comunidad global.</h3>
+        <p class="text-center">Recibe contenido seleccionado, herramientas útiles y lo mejor del mundo arborista
+          directamente en tu correo.</p>
+        <button class="btn btn-primary boton-primario" type="button">Unirme a la comunidad</button>
 
-    <div class="card mb-5 mt-5 mx-auto" style="max-width: 850px;">
+      </div>
+    </section>
+    <!--Card Mediana (Informativa)-->
+    <div class="card mx-auto card-mediana">
       <div class="row g-0">
         <div class="col-md-6">
-          <img src="./assets/Arboristas-tres-parque.png" class="img-fluid rounded-start" alt="arboristas-en-parque">
+          <img src="./assets/arboristas(3)-riendo.png" class="img-fluid rounded-start" alt="3 arboristas riendo al lado de un arbol">
         </div>
         <div class="col-md-6">
           <div class="card-body">
-            <h5 class="card-title">Del árbol al aprendizaje: miradas desde el oficio.</h5>
-            <p class="card-text">Aprende cómo arboristas del mundo enfrentan desafíos reales: desde poda en altura hasta
-              liderazgo de equipos. Conoce casos reales, herramientas y decisiones que inspiran.</p>
+            <h3 class="card-title">Del árbol al aprendizaje: miradas desde el oficio</h3>
+            <p class="card-text">Aprende cómo arboristas del mundo enfrentan desafíos reales: desde poda en altura hasta liderazgo de equipos.</p>
+            <p>Conoce casos reales, herramientas y decisiones que inspiran.</p>
           </div>
         </div>
       </div>
     </div>
-
-    <div class="table-responsive">
+    <!--Tabla-->
+    <div class="table-responsive tabla-estilo">
       <table class="table align-middle">
         <thead>
           <tr>
@@ -99,22 +101,18 @@
         <tbody>
           <tr class="align-top">
             <td>
-              <h4>Técnicas, herramientas y experiencia en terreno.</h4>
-              <h5>Accede a contenido práctico sobre poda, escalada, normativas y equipos. Aquí se comparten aprendizajes
-                reales del trabajo diario, con testimonios, buenas prácticas y recursos que fortalecen la labor
-                profesional del arborista.</h5>
+              <h3>Técnicas, herramientas y experiencia en terreno.</h3>
+              <p>Accede a contenido práctico sobre poda, escalada, normativas y equipos. Aquí se comparten aprendizajes reales del trabajo diario, con testimonios, buenas prácticas y recursos que fortalecen la labor
+                profesional del arborista.</p>
             </td>
             <td>
-              <h4>Técnicas, herramientas y experiencia en terreno.</h4>
-              <h5>Accede a contenido práctico sobre poda, escalada, normativas y equipos. Aquí se comparten aprendizajes
-                reales del trabajo diario, con testimonios, buenas prácticas y recursos que fortalecen la labor
-                profesional del arborista.</h5>
+              <h3>Técnicas, herramientas y experiencia en terreno.</h3>
+              <p>Accede a contenido práctico sobre poda, escalada, normativas y equipos. Aquí se comparten aprendizajes reales del trabajo diario, con testimonios, buenas prácticas y recursos que fortalecen la labor
+                profesional del arborista.</p>
             </td>
             <td>
-              <h4>Técnicas, herramientas y experiencia en terreno.</h4>
-              <h5>Accede a contenido práctico sobre poda, escalada, normativas y equipos. Aquí se comparten aprendizajes
-                reales del trabajo diario, con testimonios, buenas prácticas y recursos que fortalecen la labor
-                profesional del arborista.</h5>
+              <h3>Técnicas, herramientas y experiencia en terreno.</h3>
+              <p>Accede a contenido práctico sobre poda, escalada, normativas y equipos. Aquí se comparten aprendizajes reales del trabajo diario, con testimonios, buenas prácticas y recursos que fortalecen la labor profesional del arborista.</p>
             </td>
           </tr>
         </tbody>
@@ -168,7 +166,7 @@
             <p>Y recibe contenido nuevo cada semana.</p>
             <div class="d-flex flex-column flex-sm-row w-100 gap-2"> <label for="newsletter1" class="visually-hidden">tu
                 correo</label> <input id="newsletter1" type="email" class="form-control" placeholder="Email address">
-              <button class="btn btn-estilo-jesu" type="button">Suscribirme</button> 
+              <button class="btn btn-estilo-jesu" type="button">Suscribirme</button>
             </div>
           </form>
         </div>
