--- a/pages/treeWisdom.html
+++ b/pages/treeWisdom.html
@@ -62,7 +62,7 @@
             <p>Aquí se entrelazan culturas, espiritualidad y ciencia para entender a los árboles como maestros,
                 guardianes y aliados en nuestra conexión con el planeta.</p>
 
-            <div class="card card-estilo-jesu mb-5 mt-5 mx-auto">
+            <div class="card card-mediana mx-auto">
                 <div class="row g-0">
                     <div class="col-md-6">
                         <img src="../assets/árbol-treeWisdom.ok.png" class="img-fluid rounded-start"
@@ -70,7 +70,7 @@
                     </div>
                     <div class="col-md-6 d-flex texto-card-jesu">
                         <div class="card-body">
-                            <h5 class="card-title">La sabiduría del bosque nos guía hacia el futuro.</h5>
+                            <h3 class="card-title">La sabiduría del bosque nos guía hacia el futuro.</h3>
                             <p class="card-text">A lo largo de la historia, los árboles han sido símbolo de conexión,
                                 sabiduría y equilibrio.
                                 Tree Wisdom es un espacio donde convergen conocimientos ancestrales, espiritualidad
