--- a/index.html
+++ b/index.html
@@ -93,33 +93,33 @@
       <table class="table align-middle">
         <thead>
           <tr>
-            <th>Worklife</th>
-            <th>Tree Wisdom</th>
-            <th>Environment</th>
+            <th>🛠️ Worklife</th>
+            <th>🌳 Tree Wisdom</th>
+            <th>🌍 Environment</th>
           </tr>
         </thead>
         <tbody>
           <tr class="align-top">
             <td>
-              <h3>Técnicas, herramientas y experiencia en terreno.</h3>
+              <h3>Técnicas, herramientas y experiencia en terreno</h3>
               <p>Accede a contenido práctico sobre poda, escalada, normativas y equipos. Aquí se comparten aprendizajes reales del trabajo diario, con testimonios, buenas prácticas y recursos que fortalecen la labor
                 profesional del arborista.</p>
             </td>
             <td>
-              <h3>Técnicas, herramientas y experiencia en terreno.</h3>
-              <p>Accede a contenido práctico sobre poda, escalada, normativas y equipos. Aquí se comparten aprendizajes reales del trabajo diario, con testimonios, buenas prácticas y recursos que fortalecen la labor
-                profesional del arborista.</p>
+              <h3>Saberes ancestrales y futuro de los árboles</h3>
+              <p>Explora las ideas que conectan la historia, la ética y la espiritualidad de los árboles. Desde conocimientos indígenas hasta la bioética arbórea moderna, este espacio invita a reflexionar sobre el valor profundo del árbol como ser vivo, símbolo y legado.</p>
             </td>
             <td>
-              <h3>Técnicas, herramientas y experiencia en terreno.</h3>
-              <p>Accede a contenido práctico sobre poda, escalada, normativas y equipos. Aquí se comparten aprendizajes reales del trabajo diario, con testimonios, buenas prácticas y recursos que fortalecen la labor profesional del arborista.</p>
+              <h3>Arborismo como respuesta climática y urbana</h3>
+              <p>Conecta el arborismo con los desafíos ambientales actuales: ciudades resilientes, conservación, biodiversidad y salud del suelo. Esta sección vincula ciencia y acción, mostrando cómo el cuidado de árboles impacta directamente en el futuro del planeta.</p>
             </td>
           </tr>
         </tbody>
       </table>
     </div>
+
     <div class="card mb-5">
-      <img src="./assets/Grupo.arboristas.saludando.png" class="card-img-top" alt="grupo-de-arboristas">
+      <img src="./assets/vista-aerea-evento.png" class="card-img-top" alt="vista aerea de un grupo de arboristas reunidos compartiendo en un parque con mucha naturaleza">
       <div class="card-body">
         <h5 class="card-title">Ya somos cientos, y seguimos creciendo!</h5>
         <p class="card-text">Únete a una comunidad que no solo sube a los árboles, sino que también eleva el
