Empezando el footer

--- a/index.html
+++ b/index.html
@@ -77,12 +77,14 @@
     <div class="card mx-auto card-mediana">
       <div class="row g-0">
         <div class="col-md-6">
-          <img src="./assets/arboristas(3)-riendo.png" class="img-fluid rounded-start" alt="3 arboristas riendo al lado de un arbol">
+          <img src="./assets/arboristas(3)-riendo.png" class="img-fluid rounded-start"
+            alt="3 arboristas riendo al lado de un arbol">
         </div>
         <div class="col-md-6">
           <div class="card-body">
             <h3 class="card-title">Del árbol al aprendizaje: miradas desde el oficio</h3>
-            <p class="card-text">Aprende cómo arboristas del mundo enfrentan desafíos reales: desde poda en altura hasta liderazgo de equipos.</p>
+            <p class="card-text">Aprende cómo arboristas del mundo enfrentan desafíos reales: desde poda en altura hasta
+              liderazgo de equipos.</p>
             <p>Conoce casos reales, herramientas y decisiones que inspiran.</p>
           </div>
         </div>
@@ -102,34 +104,38 @@
           <tr class="align-top">
             <td>
               <h3>Técnicas, herramientas y experiencia en terreno</h3>
-              <p>Accede a contenido práctico sobre poda, escalada, normativas y equipos. Aquí se comparten aprendizajes reales del trabajo diario, con testimonios, buenas prácticas y recursos que fortalecen la labor
+              <p>Accede a contenido práctico sobre poda, escalada, normativas y equipos. Aquí se comparten aprendizajes
+                reales del trabajo diario, con testimonios, buenas prácticas y recursos que fortalecen la labor
                 profesional del arborista.</p>
             </td>
             <td>
               <h3>Saberes ancestrales y futuro de los árboles</h3>
-              <p>Explora las ideas que conectan la historia, la ética y la espiritualidad de los árboles. Desde conocimientos indígenas hasta la bioética arbórea moderna, este espacio invita a reflexionar sobre el valor profundo del árbol como ser vivo, símbolo y legado.</p>
+              <p>Explora las ideas que conectan la historia, la ética y la espiritualidad de los árboles. Desde
+                conocimientos indígenas hasta la bioética arbórea moderna, este espacio invita a reflexionar sobre el
+                valor profundo del árbol como ser vivo, símbolo y legado.</p>
             </td>
             <td>
               <h3>Arborismo como respuesta climática y urbana</h3>
-              <p>Conecta el arborismo con los desafíos ambientales actuales: ciudades resilientes, conservación, biodiversidad y salud del suelo. Esta sección vincula ciencia y acción, mostrando cómo el cuidado de árboles impacta directamente en el futuro del planeta.</p>
+              <p>Conecta el arborismo con los desafíos ambientales actuales: ciudades resilientes, conservación,
+                biodiversidad y salud del suelo. Esta sección vincula ciencia y acción, mostrando cómo el cuidado de
+                árboles impacta directamente en el futuro del planeta.</p>
             </td>
           </tr>
         </tbody>
       </table>
     </div>
-
-    <div class="card mb-5">
-      <img src="./assets/vista-aerea-evento.png" class="card-img-top" alt="vista aerea de un grupo de arboristas reunidos compartiendo en un parque con mucha naturaleza">
+    <!-- Card horizontal img+texto+boton -->
+    <div class="card card-horizontal">
+      <img src="./assets/vista-aerea-evento.png" class="card-img-top"
+        alt="vista aerea de un grupo de arboristas reunidos compartiendo en un parque con mucha naturaleza">
       <div class="card-body">
-        <h5 class="card-title">Ya somos cientos, y seguimos creciendo!</h5>
-        <p class="card-text">Únete a una comunidad que no solo sube a los árboles, sino que también eleva el
-          conocimiento, la ética y el propósito de esta profesión.</p>
-        <p class="card-text"><small class="text-body-secondary">Aquí cultivamos saberes, compartimos experiencias y
-            crecemos juntos.</small></p>
-        <button class="btn btn-primary w-50 mx-auto" type="button">Quiero ser parte</button>
+        <h3 class="card-title">Ya somos cientos y seguimos creciendo!</h3>
+        <p class="card-text">✨ Únete a una comunidad que no solo sube a los árboles, sino que también eleva el
+          conocimiento, la ética y el propósito de esta profesión ✨</p>
+        <p class="card-text">🌳 Aquí cultivamos saberes, compartimos experiencias y crecemos juntos 🌳</p>
+        <button class="btn btn-primary boton-primario" type="button">Quiero ser parte</button>
       </div>
     </div>
-
   </main>
   <footer class="py-5 estilo-footer-jesu">
     <div class="container">
@@ -140,7 +146,7 @@
         </div>
         <!--Links-->
         <div class="col-6 col-md-2 mb-3">
-          <h5>Secciones</h5>
+          <h4>Secciones</h4>
           <ul class="nav flex-column">
             <li class="nav-item mb-2">
               <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
@@ -160,12 +166,13 @@
           </ul>
         </div>
         <!--Newsletter-->
-        <div class="col-md-5 offset-md-1 mb-3">
+        <div class="col-md-5 offset-md-1 mb-3 newsletter">
           <form>
-            <h5>Suscríbete a nuestra Newsletter</h5>
+            <h4>Suscríbete a nuestra Newsletter</h4>
             <p>Y recibe contenido nuevo cada semana.</p>
             <div class="d-flex flex-column flex-sm-row w-100 gap-2"> <label for="newsletter1" class="visually-hidden">tu
-                correo</label> <input id="newsletter1" type="email" class="form-control" placeholder="Email address">
+                correo</label> 
+                <input id="newsletter1" type="email" class="form-control" placeholder="Email address">
               <button class="btn btn-estilo-jesu" type="button">Suscribirme</button>
             </div>
           </form>
