se agregó estilo a Tree Wisdom

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div class="row">
         <!--Logo-->
         <div class="col-6 col-md-2 mb-3">
-          <img class="logo-navbar" src="./assets/Logo-Tree-Tale.png" alt="Logo-TreeTale">
+          <img class="logo-footer" src="./assets/Logo-Tree-Tale.png" alt="Logo-TreeTale">
         </div>
         <!--Links-->
         <div class="col-6 col-md-2 mb-3">
@@ -163,17 +163,20 @@
             <li class="nav-item mb-2">
               <a href="./pages/managment.html" class="nav-link p-0 text-body-secondary">Managment</a>
             </li>
+            <li class="nav-item mb-2">
+              <a href="./pages/managment.html" class="nav-link p-0 text-body-secondary">Contacto</a>
+            </li>
           </ul>
         </div>
         <!--Newsletter-->
         <div class="col-md-5 offset-md-1 mb-3 newsletter">
           <form>
             <h4>Suscríbete a nuestra Newsletter</h4>
-            <p>Y recibe contenido nuevo cada semana.</p>
+            <p>Y recibe contenido nuevo cada semana 🌿</p>
             <div class="d-flex flex-column flex-sm-row w-100 gap-2"> <label for="newsletter1" class="visually-hidden">tu
                 correo</label> 
-                <input id="newsletter1" type="email" class="form-control" placeholder="Email address">
-              <button class="btn btn-estilo-jesu" type="button">Suscribirme</button>
+                <input id="newsletter1" type="email" class="form-control" placeholder="Correo electrónico">
+              <button class="btn boton-secundario" type="button">Suscribirme</button>
             </div>
           </form>
         </div>
