--- a/pages/treeWisdom.html
+++ b/pages/treeWisdom.html
@@ -57,35 +57,32 @@
     </header>
     <main>
         <div class="container titulo-page">
-            <h3>Tree Wisdom</h3>
-            <h6>Saberes ancestrales, filosofía arbórea y visiones de futuro.</h6>
-            <p>Aquí se entrelazan culturas, espiritualidad y ciencia para entender a los árboles como maestros,
-                guardianes y aliados en nuestra conexión con el planeta.</p>
-
-            <div class="card card-mediana mx-auto">
-                <div class="row g-0">
-                    <div class="col-md-6">
-                        <img src="../assets/árbol-treeWisdom.ok.png" class="img-fluid rounded-start"
-                            alt="arbol-sabiduría">
-                    </div>
-                    <div class="col-md-6 d-flex texto-card-jesu">
-                        <div class="card-body">
-                            <h3 class="card-title">La sabiduría del bosque nos guía hacia el futuro.</h3>
-                            <p class="card-text">A lo largo de la historia, los árboles han sido símbolo de conexión,
-                                sabiduría y equilibrio.
-                                Tree Wisdom es un espacio donde convergen conocimientos ancestrales, espiritualidad
-                                natural
-                                y ciencia regenerativa para quienes quieren entender más profundamente su rol junto a
-                                los
-                                árboles.</p>
-                        </div>
+            <section>
+                <h2>Saberes ancestrales y filosofía arbórea</h2>
+                <p>Aquí se entrelazan culturas, espiritualidad y ciencia para entender a los árboles como maestros,
+                    guardianes y aliados en nuestra conexión con el planeta.</p>
+            </section>
+        </div>
+        <div class="card card-mediana mx-auto">
+            <div class="row g-0">
+                <div class="col-md-6">
+                    <img src="../assets/árbol-treeWisdom.ok.png" class="img-fluid rounded-start" alt="arbol-sabiduría">
+                </div>
+                <div class="col-md-6 d-flex texto-card-jesu">
+                    <div class="card-body">
+                        <h3 class="card-title">La sabiduría del bosque nos guía hacia el futuro.</h3>
+                        <p class="card-text">A lo largo de la historia, los árboles han sido símbolo de conexión,sabiduría y equilibrio.</p>
+                        <p>Tree Wisdom es un espacio donde convergen conocimientos ancestrales, espiritualidad natural y ciencia para quienes quieren entender más profundamente su rol junto a los árboles</p>
+                        
                     </div>
                 </div>
             </div>
         </div>
+
         <div class="container titulo-parrafo">
             <h4>Conocimiento que conecta pasado y presente</h4>
-            <p>Durante siglos, los árboles han sido una fuente constante de observación, estudio y enseñanza. En esta
+            <p>Durante siglos, los árboles han sido una fuente constante de observación, estudio y enseñanza. En
+                esta
                 sección reunimos conocimientos ancestrales y hallazgos científicos actuales que ayudan a
                 entender mejor nuestro entorno natural.
                 Desde prácticas tradicionales hasta investigaciones botánicas, aquí encontrarás ideas valiosas para
@@ -119,7 +116,8 @@
                         <img src="../assets/card-6-TreeWisdom.png" class="card-img-top" alt="árbol-anciano">
                         <div class="card-body">
                             <h5 class="card-title">El tiempo arbóreo y su mensaje ecológico</h5>
-                            <p class="card-text">Lo que el ritmo lento, la longevidad y la memoria de los árboles nos
+                            <p class="card-text">Lo que el ritmo lento, la longevidad y la memoria de los árboles
+                                nos
                                 enseñan sobre sostenibilidad y futuro planetario.</p>
                         </div>
                     </div>
@@ -139,7 +137,8 @@
                         <img src="../assets/Card-2-TreeWisdom.png" class="card-img-top" alt="cultura-ancestral">
                         <div class="card-body">
                             <h5 class="card-title">Cosmovisión ancestral y equilibrio con el bosque</h5>
-                            <p class="card-text">Relación armónica entre pueblos originarios y los ciclos naturales del
+                            <p class="card-text">Relación armónica entre pueblos originarios y los ciclos naturales
+                                del
                                 bosque, donde el árbol no es recurso, sino pariente.</p>
                         </div>
                     </div>
