se agrego mas estilos a tree wisdom

--- a/pages/treeWisdom.html
+++ b/pages/treeWisdom.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Saberes ancestrales, filosofía arbores y ciencia de los arboles para nutrir al arborista en sus saberes.">
+    <meta name="keywords" content="Arborismo, arboricultura, arborist, tree climber">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
@@ -13,7 +16,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--CSS-->
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Document</title>
+    <title>Tree tale | Saberes, filosofía y ciencia.</title>
 </head>
 
 <body>
@@ -71,85 +74,96 @@
                 <div class="col-md-6 d-flex texto-card-jesu">
                     <div class="card-body">
                         <h3 class="card-title">La sabiduría del bosque nos guía hacia el futuro.</h3>
-                        <p class="card-text">A lo largo de la historia, los árboles han sido símbolo de conexión,sabiduría y equilibrio.</p>
-                        <p>Tree Wisdom es un espacio donde convergen conocimientos ancestrales, espiritualidad natural y ciencia para quienes quieren entender más profundamente su rol junto a los árboles</p>
-                        
+                        <p class="card-text">A lo largo de la historia, los árboles han sido símbolo de
+                            conexión,sabiduría y equilibrio.</p>
+                        <p>Tree Wisdom es un espacio donde convergen conocimientos ancestrales, espiritualidad natural y
+                            ciencia para quienes quieren entender más profundamente su rol junto a los árboles</p>
+
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="container titulo-parrafo">
-            <h4>Conocimiento que conecta pasado y presente</h4>
-            <p>Durante siglos, los árboles han sido una fuente constante de observación, estudio y enseñanza. En
-                esta
-                sección reunimos conocimientos ancestrales y hallazgos científicos actuales que ayudan a
-                entender mejor nuestro entorno natural.
-                Desde prácticas tradicionales hasta investigaciones botánicas, aquí encontrarás ideas valiosas para
-                aplicar en el trabajo, la gestión y la relación con los árboles hoy.
-            </p>
+        <div class="container titulo-parrafo info-card-container">
+            <div class="info-card">
+                <h3>Conocimiento que conecta pasado y presente</h3>
+                <p>Durante siglos, los árboles han sido una fuente constante de observación, estudio y enseñanza. En
+                    esta sección reunimos conocimientos ancestrales y hallazgos científicos actuales que ayudan a
+                    entender mejor nuestro entorno natural.</p>
+                <p> Desde prácticas tradicionales hasta investigaciones botánicas, aquí encontrarás ideas valiosas para
+                    aplicar en el trabajo, la gestión y la relación con los árboles hoy.</p>
+
+            </div>
         </div>
-        <div class="container py-5">
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="../assets/Card-4-TreeWisdom.png" class="card-img-top" alt="interconeccion-árboles">
-                        <div class="card-body">
-                            <h5 class="card-title">Neurobotánica y comunicación entre árboles</h5>
-                            <p class="card-text">Investigaciones sobre cómo los árboles perciben, se adaptan y se
-                                comunican a través de redes subterráneas y señales químicas.</p>
+        <!--Card pequeña para blogs-->
+        <div class="card-para-blogs">
+            <div class="container py-5 ">
+                <header class="mb-4 text-center">
+                    <h2 class="seccion-titulo">Explora las conexiones del mundo arbóreo</h2>
+                    <p class="seccion-subtitulo">Descubre las áreas clave que revelan cómo los árboles comunican, resisten, inspiran y enseñan a través de su sabiduría ancestral y natural.</p>
+                </header>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <div class="card card-jesu h-100">
+                            <img src="../assets/Card-4-TreeWisdom.png" class="card-img-top"
+                                alt="interconeccion-árboles">
+                            <div class="card-body card-body-jesu">
+                                <h3 class="card-title">Neurobotánica y comunicación entre árboles</h3>
+                                <p class="card-text">Investigaciones sobre cómo los árboles perciben, se adaptan y se
+                                    comunican a través de redes subterráneas y señales químicas.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="../assets/Card-5-TreeWisdom.png" class="card-img-top" alt="resilencia-árboles">
-                        <div class="card-body">
-                            <h5 class="card-title">Inteligencia vegetal y resiliencia natural</h5>
-                            <p class="card-text">Cómo los árboles resuelven problemas, se defienden, cooperan y
-                                regeneran, revelando formas no humanas de inteligencia.</p>
+                    <div class="col">
+                        <div class="card card-jesu h-100">
+                            <img src="../assets/Card-5-TreeWisdom.png" class="card-img-top" alt="resilencia-árboles">
+                            <div class="card-body card-body-jesu">
+                                <h3 class="card-title">Inteligencia vegetal y resiliencia natural</h3>
+                                <p class="card-text">Cómo los árboles resuelven problemas, se defienden, cooperan y
+                                    regeneran, revelando formas no humanas de inteligencia.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="../assets/card-6-TreeWisdom.png" class="card-img-top" alt="árbol-anciano">
-                        <div class="card-body">
-                            <h5 class="card-title">El tiempo arbóreo y su mensaje ecológico</h5>
-                            <p class="card-text">Lo que el ritmo lento, la longevidad y la memoria de los árboles
-                                nos
-                                enseñan sobre sostenibilidad y futuro planetario.</p>
+                    <div class="col">
+                        <div class="card card-jesu h-100">
+                            <img src="../assets/card-6-TreeWisdom.png" class="card-img-top" alt="árbol-anciano">
+                            <div class="card-body card-body-jesu">
+                                <h3 class="card-title">El tiempo arbóreo y su mensaje ecológico</h3>
+                                <p class="card-text">Lo que el ritmo lento, la longevidad y la memoria de los árboles
+                                    nos
+                                    enseñan sobre sostenibilidad y futuro planetario.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="../assets/Card-1-TreeWisdom.png" class="card-img-top" alt="árbol-sagrado">
-                        <div class="card-body">
-                            <h5 class="card-title">Árboles sagrados y guardianes espirituales</h5>
-                            <p class="card-text">Cómo distintas culturas originarias reconocen a los árboles como
-                                protectores, guías o ancestros vivos.</p>
+                    <div class="col">
+                        <div class="card card-jesu h-100">
+                            <img src="../assets/Card-1-TreeWisdom.png" class="card-img-top" alt="árbol-sagrado">
+                            <div class="card-body card-body-jesu">
+                                <h3 class="card-title">Árboles sagrados y guardianes espirituales</h3>
+                                <p class="card-text">Cómo distintas culturas originarias reconocen a los árboles como
+                                    protectores, guías o ancestros vivos.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="../assets/Card-2-TreeWisdom.png" class="card-img-top" alt="cultura-ancestral">
-                        <div class="card-body">
-                            <h5 class="card-title">Cosmovisión ancestral y equilibrio con el bosque</h5>
-                            <p class="card-text">Relación armónica entre pueblos originarios y los ciclos naturales
-                                del
-                                bosque, donde el árbol no es recurso, sino pariente.</p>
+                    <div class="col">
+                        <div class="card card-jesu h-100">
+                            <img src="../assets/Card-2-TreeWisdom.png" class="card-img-top" alt="cultura-ancestral">
+                            <div class="card-body card-body-jesu">
+                                <h3 class="card-title">Cosmovisión ancestral y equilibrio con el bosque</h3>
+                                <p class="card-text">Relación armónica entre pueblos originarios y los ciclos naturales
+                                    del
+                                    bosque, donde el árbol no es recurso, sino pariente.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="../assets/Card-3-TreeWisdom.png" class="card-img-top" alt="relatos-ancestrales">
-                        <div class="card-body">
-                            <h5 class="card-title">Relatos y mitos que nacen de los árboles</h5>
-                            <p class="card-text">Fábulas, leyendas y enseñanzas tradicionales que transmiten ética,
-                                respeto y conexión a través del lenguaje simbólico del árbol.</p>
+                    <div class="col">
+                        <div class="card card-jesu h-100">
+                            <img src="../assets/Card-3-TreeWisdom.png" class="card-img-top" alt="relatos-ancestrales">
+                            <div class="card-body card-body-jesu">
+                                <h3 class="card-title">Relatos y mitos que nacen de los árboles</h3>
+                                <p class="card-text">Fábulas, leyendas y enseñanzas tradicionales que transmiten ética,
+                                    respeto y conexión a través del lenguaje simbólico del árbol.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
