--- a/pages/worklife.html
+++ b/pages/worklife.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Técnicas, herramientas y experiencias reales de arboristas de todas partes del mundo.">
+    <meta name="keywords" content="arborismo, tree climber, arboricultura.">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
@@ -13,7 +15,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--CSS-->
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Document</title>
+    <title>Tree tale | Técnicas, herramientas y experiencias.</title>
 </head>
 
 <body>
