--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=1.0">
+  <meta name="description" content="Comunidad de arboristas global, pagina con toda la informacion centralizada de las diferentes areas del arborismo.">
+  <meta name="keywords" content="Arborismo, tree climber, arboricultura, manejo arboles, poda arboles.">
   <!--Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
@@ -15,7 +17,7 @@
   <link rel="stylesheet" href="./styles/style.css">
 
 
-  <title>Document</title>
+  <title>Tree tale</title>
 </head>
 
 <body>
